Added Start screen to select options

--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
         </tbody>
       </table>
     </section>
+    <section id="startSection">
+      <h3><strong>Choose your opponent</strong></h3>
+      <div class="vsSelector">
+        <h2>Vs Human</h2>
+      </div>
+      <div style="display:none;" class="vsSelector">
+        <h2>Vs Computer</h2>
+      </div>
+      <h3><strong>Choose your style</strong></h3>
+      <div class="vsSelector">
+        <h2>Default</h2>
+      </div>
+      <div class="vsSelector">
+        <h2>Hello Kitty</h2>
+      </div>
+      <button type="button" style="width:500px;margin:auto;margin-top:10px;display:block;" class="btn btn-success btn-lg">Start Game</button>
+    </section>
   </div>
 </body>
 </html>
