--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div id="buttons">
         <button style="display:none;" type="button" class="btn btn-success">Start Game</button>
         <button onclick="Game.startGame(Player1, Player2)" type="button" class="btn btn-primary">Restart Game</button>
+        <button onclick="startMenuButtonClick()" type="button" class="btn btn-primary">Start menu</button>
       </div>
     </header>
     <section>
@@ -48,21 +49,16 @@
     </section>
     <section id="startSection">
       <h3><strong>Choose your opponent</strong></h3>
-      <div class="vsSelector">
-        <h2>Vs Human</h2>
-      </div>
+      <button class="vsSelector" style="background-color:#4CAF50;color:white;">Vs Human</button>
       <div style="display:none;" class="vsSelector">
         <h2>Vs Computer</h2>
       </div>
       <h3><strong>Choose your style</strong></h3>
-      <div class="vsSelector">
-        <h2>Default</h2>
-      </div>
-      <div class="vsSelector">
-        <h2>Hello Kitty</h2>
-      </div>
-      <button type="button" style="width:500px;margin:auto;margin-top:10px;display:block;" class="btn btn-success btn-lg">Start Game</button>
+      <button onclick="Game.changeStyle('')" id="defaultStyle" class="vsSelector" style="background-color:#4CAF50;color:white;">Default</button>
+      <button onclick="Game.changeStyle('hello')" id="helloKittyStyle" class="vsSelector"> Hello Kitty </button>
+      <button onclick="startGameButtonClick()" type="button" style="width:500px;margin:auto;margin-top:10px;display:block;" class="btn btn-success btn-lg">Start Game</button>
     </section>
   </div>
 </body>
+
 </html>
